PetitWaveTrace/src/org/cte/PetitWaveTrace/grammar/TraceGrammarParser.java
// Generated from TraceGrammar.g4 by ANTLR 4.0
package org.cte.PetitWaveTrace.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TraceGrammarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CHANNELS=1, VIOLATEDASSERTS=2, NONE=3, TRUE=4, FALSE=5, LCURLY=6, RCURLY=7, 
		LSQUARE=8, RSQUARE=9, LPAREN=10, RPAREN=11, TICK=12, EQ=13, COMMA=14, 
		AT=15, MINUS=16, DQUOTE=17, COLON=18, TransitionDetail=19, Number=20, 
		Identifier=21, WS=22;
	public static final String[] tokenNames = {
		"<INVALID>", "'Channels'", "'Violated asserts:'", "'none'", "'true'", 
		"'false'", "'{'", "'}'", "'['", "']'", "'('", "')'", "'''", "'='", "','", 
		"'@'", "'-'", "'\"'", "':'", "TransitionDetail", "Number", "Identifier", 
		"WS"
	};
	public static final int
		RULE_identifier = 0, RULE_instanceName = 1, RULE_fiInstanceName = 2, RULE_field = 3, 
		RULE_fieldValue = 4, RULE_booleanValue = 5, RULE_numberValue = 6, RULE_arrayElements = 7, 
		RULE_arrayValue = 8, RULE_recordElements = 9, RULE_recordValue = 10, RULE_stateName = 11, 
		RULE_processState = 12, RULE_process = 13, RULE_channels = 14, RULE_violatedAsserts = 15, 
		RULE_configurationElement = 16, RULE_configuration = 17, RULE_transition = 18, 
		RULE_traceFile = 19;
	public static final String[] ruleNames = {
		"identifier", "instanceName", "fiInstanceName", "field", "fieldValue", 
		"booleanValue", "numberValue", "arrayElements", "arrayValue", "recordElements", 
		"recordValue", "stateName", "processState", "process", "channels", "violatedAsserts", 
		"configurationElement", "configuration", "transition", "traceFile"
	};

	@Override
	public String getGrammarFileName() { return "TraceGrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public TraceGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class IdentifierContext extends ParserRuleContext {
		public List<TerminalNode> COLON() { return getTokens(TraceGrammarParser.COLON); }
		public TerminalNode Identifier(int i) {
			return getToken(TraceGrammarParser.Identifier, i);
		}
		public TerminalNode COLON(int i) {
			return getToken(TraceGrammarParser.COLON, i);
		}
		public List<TerminalNode> Identifier() { return getTokens(TraceGrammarParser.Identifier); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).exitIdentifier(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_identifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40); match(Identifier);
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COLON) {
				{
				{
				setState(41); match(COLON);
				setState(42); match(Identifier);
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstanceNameContext extends ParserRuleContext {
		public TerminalNode LCURLY() { return getToken(TraceGrammarParser.LCURLY, 0); }
		public TerminalNode Number() { return getToken(TraceGrammarParser.Number, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode RCURLY() { return getToken(TraceGrammarParser.RCURLY, 0); }
		public InstanceNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instanceName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).enterInstanceName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).exitInstanceName(this);
		}
	}

	public final InstanceNameContext instanceName() throws RecognitionException {
		InstanceNameContext _localctx = new InstanceNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instanceName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); match(LCURLY);
			setState(49); identifier();
			setState(50); match(RCURLY);
			setState(51); match(Number);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FiInstanceNameContext extends ParserRuleContext {
		public List<TerminalNode> TICK() { return getTokens(TraceGrammarParser.TICK); }
		public InstanceNameContext instanceName() {
			return getRuleContext(InstanceNameContext.class,0);
		}
		public TerminalNode TICK(int i) {
			return getToken(TraceGrammarParser.TICK, i);
		}
		public FiInstanceNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fiInstanceName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).enterFiInstanceName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).exitFiInstanceName(this);
		}
	}

	public final FiInstanceNameContext fiInstanceName() throws RecognitionException {
		FiInstanceNameContext _localctx = new FiInstanceNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fiInstanceName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53); match(TICK);
			setState(54); instanceName();
			setState(55); match(TICK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public FieldValueContext fieldValue() {
			return getRuleContext(FieldValueContext.class,0);
		}
		public TerminalNode EQ() { return getToken(TraceGrammarParser.EQ, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).enterField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).exitField(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57); identifier();
			setState(58); match(EQ);
			setState(59); fieldValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldValueContext extends ParserRuleContext {
		public ArrayValueContext arrayValue() {
			return getRuleContext(ArrayValueContext.class,0);
		}
		public NumberValueContext numberValue() {
			return getRuleContext(NumberValueContext.class,0);
		}
		public RecordValueContext recordValue() {
			return getRuleContext(RecordValueContext.class,0);
		}
		public BooleanValueContext booleanValue() {
			return getRuleContext(BooleanValueContext.class,0);
		}
		public FieldValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).enterFieldValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).exitFieldValue(this);
		}
	}

	public final FieldValueContext fieldValue() throws RecognitionException {
		FieldValueContext _localctx = new FieldValueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fieldValue);
		try {
			setState(65);
			switch (_input.LA(1)) {
			case LSQUARE:
				enterOuterAlt(_localctx, 1);
				{
				setState(61); arrayValue();
				}
				break;
			case LCURLY:
				enterOuterAlt(_localctx, 2);
				{
				setState(62); recordValue();
				}
				break;
			case Number:
				enterOuterAlt(_localctx, 3);
				{
				setState(63); numberValue();
				}
				break;
			case TRUE:
			case FALSE:
				enterOuterAlt(_localctx, 4);
				{
				setState(64); booleanValue();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanValueContext extends ParserRuleContext {
		public TerminalNode FALSE() { return getToken(TraceGrammarParser.FALSE, 0); }
		public TerminalNode TRUE() { return getToken(TraceGrammarParser.TRUE, 0); }
		public BooleanValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).enterBooleanValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).exitBooleanValue(this);
		}
	}

	public final BooleanValueContext booleanValue() throws RecognitionException {
		BooleanValueContext _localctx = new BooleanValueContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_booleanValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_la = _input.LA(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberValueContext extends ParserRuleContext {
		public TerminalNode Number() { return getToken(TraceGrammarParser.Number, 0); }
		public NumberValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numberValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).enterNumberValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).exitNumberValue(this);
		}
	}

	public final NumberValueContext numberValue() throws RecognitionException {
		NumberValueContext _localctx = new NumberValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_numberValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69); match(Number);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayElementsContext extends ParserRuleContext {
		public TerminalNode COMMA(int i) {
			return getToken(TraceGrammarParser.COMMA, i);
		}
		public List<FieldValueContext> fieldValue() {
			return getRuleContexts(FieldValueContext.class);
		}
		public List<TerminalNode> COMMA() { return getTokens(TraceGrammarParser.COMMA); }
		public FieldValueContext fieldValue(int i) {
			return getRuleContext(FieldValueContext.class,i);
		}
		public ArrayElementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayElements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).enterArrayElements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).exitArrayElements(this);
		}
	}

	public final ArrayElementsContext arrayElements() throws RecognitionException {
		ArrayElementsContext _localctx = new ArrayElementsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_arrayElements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); fieldValue();
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(72); match(COMMA);
				setState(73); fieldValue();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayValueContext extends ParserRuleContext {
		public ArrayElementsContext arrayElements() {
			return getRuleContext(ArrayElementsContext.class,0);
		}
		public TerminalNode LSQUARE() { return getToken(TraceGrammarParser.LSQUARE, 0); }
		public TerminalNode RSQUARE() { return getToken(TraceGrammarParser.RSQUARE, 0); }
		public ArrayValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).enterArrayValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).exitArrayValue(this);
		}
	}

	public final ArrayValueContext arrayValue() throws RecognitionException {
		ArrayValueContext _localctx = new ArrayValueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_arrayValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); match(LSQUARE);
			setState(81);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << LCURLY) | (1L << LSQUARE) | (1L << Number))) != 0)) {
				{
				setState(80); arrayElements();
				}
			}

			setState(83); match(RSQUARE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecordElementsContext extends ParserRuleContext {
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(TraceGrammarParser.COMMA, i);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TraceGrammarParser.COMMA); }
		public RecordElementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recordElements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).enterRecordElements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).exitRecordElements(this);
		}
	}

	public final RecordElementsContext recordElements() throws RecognitionException {
		RecordElementsContext _localctx = new RecordElementsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_recordElements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85); field();
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(86); match(COMMA);
				setState(87); field();
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecordValueContext extends ParserRuleContext {
		public TerminalNode LCURLY() { return getToken(TraceGrammarParser.LCURLY, 0); }
		public RecordElementsContext recordElements() {
			return getRuleContext(RecordElementsContext.class,0);
		}
		public TerminalNode RCURLY() { return getToken(TraceGrammarParser.RCURLY, 0); }
		public RecordValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recordValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).enterRecordValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).exitRecordValue(this);
		}
	}

	public final RecordValueContext recordValue() throws RecognitionException {
		RecordValueContext _localctx = new RecordValueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_recordValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); match(LCURLY);
			setState(94); recordElements();
			setState(95); match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateNameContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(TraceGrammarParser.AT, 0); }
		public TerminalNode COMMA() { return getToken(TraceGrammarParser.COMMA, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public StateNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).enterStateName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).exitStateName(this);
		}
	}

	public final StateNameContext stateName() throws RecognitionException {
		StateNameContext _localctx = new StateNameContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_stateName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_la = _input.LA(1);
			if (_la==AT) {
				{
				setState(97); match(AT);
				}
			}

			setState(100); identifier();
			setState(102);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(101); match(COMMA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcessStateContext extends ParserRuleContext {
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public TerminalNode MINUS(int i) {
			return getToken(TraceGrammarParser.MINUS, i);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public List<TerminalNode> MINUS() { return getTokens(TraceGrammarParser.MINUS); }
		public StateNameContext stateName() {
			return getRuleContext(StateNameContext.class,0);
		}
		public ProcessStateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_processState; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).enterProcessState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).exitProcessState(this);
		}
	}

	public final ProcessStateContext processState() throws RecognitionException {
		ProcessStateContext _localctx = new ProcessStateContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_processState);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_la = _input.LA(1);
			if (_la==AT || _la==Identifier) {
				{
				setState(104); stateName();
				}
			}

			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MINUS) {
				{
				{
				setState(107); match(MINUS);
				setState(108); field();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcessContext extends ParserRuleContext {
		public InstanceNameContext instanceName() {
			return getRuleContext(InstanceNameContext.class,0);
		}
		public TerminalNode LSQUARE() { return getToken(TraceGrammarParser.LSQUARE, 0); }
		public FiInstanceNameContext fiInstanceName() {
			return getRuleContext(FiInstanceNameContext.class,0);
		}
		public TerminalNode RSQUARE() { return getToken(TraceGrammarParser.RSQUARE, 0); }
		public ProcessStateContext processState() {
			return getRuleContext(ProcessStateContext.class,0);
		}
		public ProcessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_process; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).enterProcess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).exitProcess(this);
		}
	}

	public final ProcessContext process() throws RecognitionException {
		ProcessContext _localctx = new ProcessContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_process);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			switch (_input.LA(1)) {
			case TICK:
				{
				setState(114); fiInstanceName();
				}
				break;
			case LCURLY:
				{
				setState(115); instanceName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(118); match(LSQUARE);
			setState(119); processState();
			setState(120); match(RSQUARE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChannelsContext extends ParserRuleContext {
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(TraceGrammarParser.COMMA, i);
		}
		public TerminalNode CHANNELS() { return getToken(TraceGrammarParser.CHANNELS, 0); }
		public List<TerminalNode> COMMA() { return getTokens(TraceGrammarParser.COMMA); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public ChannelsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_channels; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).enterChannels(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).exitChannels(this);
		}
	}

	public final ChannelsContext channels() throws RecognitionException {
		ChannelsContext _localctx = new ChannelsContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_channels);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); match(CHANNELS);
			setState(123); identifier();
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(124); match(COMMA);
				setState(125); identifier();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ViolatedAssertsContext extends ParserRuleContext {
		public InstanceNameContext instanceName(int i) {
			return getRuleContext(InstanceNameContext.class,i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(TraceGrammarParser.COMMA, i);
		}
		public List<InstanceNameContext> instanceName() {
			return getRuleContexts(InstanceNameContext.class);
		}
		public List<TerminalNode> COMMA() { return getTokens(TraceGrammarParser.COMMA); }
		public TerminalNode NONE() { return getToken(TraceGrammarParser.NONE, 0); }
		public TerminalNode VIOLATEDASSERTS() { return getToken(TraceGrammarParser.VIOLATEDASSERTS, 0); }
		public ViolatedAssertsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_violatedAsserts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).enterViolatedAsserts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).exitViolatedAsserts(this);
		}
	}

	public final ViolatedAssertsContext violatedAsserts() throws RecognitionException {
		ViolatedAssertsContext _localctx = new ViolatedAssertsContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_violatedAsserts);
		int _la;
		try {
			setState(141);
			switch (_input.LA(1)) {
			case VIOLATEDASSERTS:
				enterOuterAlt(_localctx, 1);
				{
				setState(131); match(VIOLATEDASSERTS);
				setState(132); match(NONE);
				}
				break;
			case LCURLY:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(133); instanceName();
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(134); match(COMMA);
					setState(135); instanceName();
					}
					}
					setState(140);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConfigurationElementContext extends ParserRuleContext {
		public ProcessContext process() {
			return getRuleContext(ProcessContext.class,0);
		}
		public TerminalNode MINUS() { return getToken(TraceGrammarParser.MINUS, 0); }
		public ChannelsContext channels() {
			return getRuleContext(ChannelsContext.class,0);
		}
		public ViolatedAssertsContext violatedAsserts() {
			return getRuleContext(ViolatedAssertsContext.class,0);
		}
		public ConfigurationElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_configurationElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).enterConfigurationElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraceGrammarListener ) ((TraceGrammarListener)listener).exitConfigurationElement(this);
		}
	}

	public final ConfigurationElementContext configurationElement() throws RecognitionException {
		ConfigurationElementContext _localctx = new ConfigurationElementContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_configurationElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143); match(MINUS);
			setState(147);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(144); process();
				}
				break;

			case 2:
				{
				setState(145); channels();
				}
				break;

			case 3:
				{
				setState(146); violatedAsserts();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
